chore: Redis 설정 추가

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -13,3 +13,9 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
+  cache:
+    type: redis
+  redis:
+    host: 127.0.0.1
+    post: 6379
