chore: 운영서버 RDS 연결

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ out/
 ### property ##
 src/main/resources/application-auth.yml
 src/main/resources/application-aws.yml
+src/main/resources/application-dev.yml
