--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,7 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 	testImplementation 'io.findify:s3mock_2.13:0.2.6'
+	testImplementation 'com.h2database:h2'
 }
 
 tasks.named('test') {
